src/modules/ie-objects/components/ObjectDetailPageMetadata/ObjectDetailPageMetadata.module.scss
@use "src/styles/abstracts" as *;

$maintainer-logo-height: 7rem;

.p-object-detail__metadata-content {
	padding: 0 2rem;

	:global(p) {
		:global(span) {
			white-space: pre-line;
		}
	}

	@media (min-width: $breakpoint-md) {
		padding: 0 $spacer-lg;
	}

	& > {
		:global(h1),
		:global(h2),
		:global(h3),
		:global(h4),
		:global(h5),
		:global(h6),
		:global(p),
		:global(span) {
			@media (min-width: $breakpoint-md) {
				word-break: break-all;
			}

			@media (min-width: $breakpoint-lg) {
				word-break: initial;
			}
		}
	}

	&__rights-status {
		:global([class*="c-icon"]) {
			font-size: $font-size-lg;
		}
	}

	&__names-list {
		&__more-info {
			color: $neutral !important;
		}
	}

	&__previous-next {
		background-color: $silver;
		border-radius: $border-radius;
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
	}
}

.p-object-detail__metadata-maintainer-title {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-start;
}

.p-object-detail__metadata-category-tags {
	display: flex;
	flex-flow: row wrap;
	gap: $spacer-xs;
}

// maintainer logo
.p-object-detail__sidebar__content-logo {
	width: 100%;
	height: 5.3rem;
	max-width: 16rem;
	max-height: 5.3rem;
	background-repeat: no-repeat;
	background-position: right;
	background-size: contain;
}

.p-object-detail__export-dropdown__menu {
	padding: 0;

	:global(.c-menu__item) {
		width: 100%;
		background: none;
		border: 0;
		padding: $spacer-sm $spacer-md;

		&:hover {
			background: $silver;
		}
	}
}

.p-object-detail__export {
	:global(.c-menu) {
		margin: 0;
	}
}

